--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Demo DOI</title>
+    <!-- MAPBOX MAP STUFF -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
